// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertLink renders 1`] = `
<StyledLink
  priority="warning"
  to="/settings/accounts/notifications"
>
  <AlertLinkText>
    This is an external link button
  </AlertLinkText>
  <InlineSvg
    size="1em"
    src="icon-chevron-right"
  />
</StyledLink>
`;

exports[`AlertLink renders with icon 1`] = `
<StyledLink
  icon="icon-mail"
  priority="warning"
  to="/settings/accounts/notifications"
>
  <StyledInlineSvg
    size="1.5em"
    src="icon-mail"
  />
  <AlertLinkText>
    This is an external link button
  </AlertLinkText>
  <InlineSvg
    size="1em"
    src="icon-chevron-right"
  />
</StyledLink>
`;
